fix java compile warnings